feat: Saving the nogo fixes (#4102)
**What type of PR is this?**

> Feature

**What does this PR do? Why is it needed?**

nogo analyzers may produce fixes as
analysis.[Diagnostic](https://pkg.go.dev/golang.org/x/tools/go/analysis#Diagnostic).
This PR allows rules_go to save the fixes as patches, one per target.
The patch and the command to apply the patch is printed out to the
terminal for users to manually apply. The patch is also available in the
"nogo_fix" output group. This allows people to get patches for all
targets without failing the build by passing `--norun_validations
--output_groups nogo_fix`.

Example output:

```
Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging

nogo: errors found by nogo during build-time code analysis:
src/example.com/send_request.go:133:4: Add and Done should not both exist inside the same goroutine block (example_nogo_analyzer)

-------------------Suggested Fix-------------------
--- src/example.com/send_request.go
+++ src/example.com/send_request.go
@@ -123,6 +123,7 @@
 
 	for !isComplete {
 		<-ticker.C
+		concurrentJobs.Add(1)
 		go func() {
 			text, hasMore := <-line
 			if !hasMore {
@@ -130,7 +131,6 @@
 				return
 			}
 
-			concurrentJobs.Add(1)
 			defer concurrentJobs.Done()
 
 			atomic.AddInt32(&totalSend, 1)

-----------------------------------------------------

To apply the suggested fix, run the following command:
$ patch -p1 < bazel-out/k8-fastbuild/bin/src/example.com/send_request.nogo.patch

Target //src/example.com:send_request failed to build
Use --verbose_failures to see the command lines of failed build steps.
```

**Other notes for review**
An analyzer may suggest multiple alternative fixes to one issue. Only
the first one is selected by default, unless it conflicts with other
fixes, in which case it moves on to try the next alternative. If all
alternatives are tried but still have conflicts, 

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,6 +38,7 @@ use_repo(
     "com_github_gogo_protobuf",
     "com_github_golang_mock",
     "com_github_golang_protobuf",
+    "com_github_pmezard_go_difflib",
     "org_golang_google_genproto",
     "org_golang_google_grpc",
     "org_golang_google_grpc_cmd_protoc_gen_go_grpc",
