--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,10 +22,10 @@ go_sdk.download(
 )
 use_repo(
     go_sdk,
+    "go_host_compatible_sdk_label",
     "go_toolchains",
     # This name is ugly on purpose to avoid a conflict with a user-named SDK.
     "io_bazel_rules_nogo",
-    go_sdk = "go_default_sdk",
 )
 
 register_toolchains("@go_toolchains//:all")
