--- a/go/tools/bazel_testing/BUILD.bazel
+++ b/go/tools/bazel_testing/BUILD.bazel
@@ -1,17 +1,20 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("@go_host_compatible_sdk_label//:defs.bzl", "HOST_COMPATIBLE_SDK")
 load("//go:def.bzl", "go_library")
+
+HOST_COMPATIBLE_SDK_FILES = HOST_COMPATIBLE_SDK.same_package_label("files")
 
 go_library(
     name = "bazel_testing",
     srcs = ["bazel_testing.go"],
     data = [
-        "@go_sdk//:ROOT",
-        "@go_sdk//:files",
+        HOST_COMPATIBLE_SDK,
+        HOST_COMPATIBLE_SDK_FILES,
     ],
     importpath = "github.com/bazelbuild/rules_go/go/tools/bazel_testing",
     visibility = ["//visibility:public"],
     x_defs = {
-        "goRootFile": "$(rlocationpath @go_sdk//:ROOT)",
+        "goRootFile": "$(rlocationpath {})".format(HOST_COMPATIBLE_SDK),
     },
     deps = [
         "//go/runfiles",
