Update Go SDKs (#4272)
**What type of PR is this?**

Other

**What does this PR do? Why is it needed?**

Update WORKSPACE to 1.24.0 to starting testing and bump the default SDK
with Bzlmod to 1.23.6 in line with our policy to use the latest minor
version of the oldest maintained release.


**Which issues(s) does this PR fix?**

Fixes #4267

**Other notes for review**

--- a/tests/integration/popular_repos/BUILD.bazel
+++ b/tests/integration/popular_repos/BUILD.bazel
@@ -34,7 +34,6 @@ test_suite(
         "@org_golang_x_crypto//chacha20poly1305:chacha20poly1305_test",
         "@org_golang_x_crypto//cryptobyte:cryptobyte_test",
         "@org_golang_x_crypto//curve25519:curve25519_test",
-        "@org_golang_x_crypto//curve25519/internal/field:field_test",
         "@org_golang_x_crypto//ed25519:ed25519_test",
         "@org_golang_x_crypto//hkdf:hkdf_test",
         "@org_golang_x_crypto//internal/alias:alias_test",
@@ -176,14 +175,12 @@ test_suite(
         "@org_golang_x_tools//go/analysis/passes/internal/analysisutil:analysisutil_test",
         "@org_golang_x_tools//go/ast/astutil:astutil_test",
         "@org_golang_x_tools//go/callgraph:callgraph_test",
-        "@org_golang_x_tools//go/callgraph/static:static_test",
         "@org_golang_x_tools//go/callgraph/vta/internal/trie:trie_test",
         "@org_golang_x_tools//godoc/redirect:redirect_test",
         "@org_golang_x_tools//godoc/vfs:vfs_test",
         "@org_golang_x_tools//godoc/vfs/gatefs:gatefs_test",
         "@org_golang_x_tools//godoc/vfs/mapfs:mapfs_test",
         "@org_golang_x_tools//internal/aliases:aliases_test",
-        "@org_golang_x_tools//internal/analysisinternal:analysisinternal_test",
         "@org_golang_x_tools//internal/bisect:bisect_test",
         "@org_golang_x_tools//internal/diff:diff_test",
         "@org_golang_x_tools//internal/diff/lcs:lcs_test",
@@ -195,12 +192,14 @@ test_suite(
         "@org_golang_x_tools//internal/event/export/ocagent/wire:wire_test",
         "@org_golang_x_tools//internal/event/keys:keys_test",
         "@org_golang_x_tools//internal/event/label:label_test",
-        "@org_golang_x_tools//internal/fuzzy:fuzzy_test",
         "@org_golang_x_tools//internal/gopathwalk:gopathwalk_test",
         "@org_golang_x_tools//internal/jsonrpc2:jsonrpc2_test",
         "@org_golang_x_tools//internal/jsonrpc2/servertest:servertest_test",
         "@org_golang_x_tools//internal/jsonrpc2_v2:jsonrpc2_v2_test",
         "@org_golang_x_tools//internal/memoize:memoize_test",
+        "@org_golang_x_tools//internal/modindex:modindex_test",
+        "@org_golang_x_tools//internal/packagestest/testdata:testdata_test",
+        "@org_golang_x_tools//internal/pkgbits:pkgbits_test",
         "@org_golang_x_tools//internal/proxydir:proxydir_test",
         "@org_golang_x_tools//internal/robustio:robustio_test",
         "@org_golang_x_tools//internal/stack:stack_test",
@@ -270,13 +269,13 @@ build_test(
         "@org_golang_x_tools//cmd/file2fuzz:file2fuzz",
         "@org_golang_x_tools//cmd/fiximports:fiximports",
         "@org_golang_x_tools//cmd/gonew:gonew",
-        "@org_golang_x_tools//cmd/gorename:gorename",
         "@org_golang_x_tools//cmd/signature-fuzzer/fuzz-driver:fuzz-driver",
         "@org_golang_x_tools//cmd/signature-fuzzer/fuzz-runner:fuzz-runner",
         "@org_golang_x_tools//cmd/stringer:stringer",
         "@org_golang_x_tools//container/intsets:intsets",
         "@org_golang_x_tools//copyright:copyright",
         "@org_golang_x_tools//go/analysis/analysistest:analysistest",
+        "@org_golang_x_tools//go/analysis/checker:checker",
         "@org_golang_x_tools//go/analysis/multichecker:multichecker",
         "@org_golang_x_tools//go/analysis/passes/asmdecl:asmdecl",
         "@org_golang_x_tools//go/analysis/passes/appends:appends",
@@ -325,11 +324,13 @@ build_test(
         "@org_golang_x_tools//go/analysis/passes/unusedwrite:unusedwrite",
         "@org_golang_x_tools//go/analysis/passes/timeformat:timeformat",
         "@org_golang_x_tools//go/analysis/passes/usesgenerics:usesgenerics",
+        "@org_golang_x_tools//go/analysis/passes/waitgroup:waitgroup",
         "@org_golang_x_tools//go/analysis/unitchecker:unitchecker",
         "@org_golang_x_tools//go/ast/inspector:inspector",
         "@org_golang_x_tools//go/buildutil:buildutil",
         "@org_golang_x_tools//go/callgraph/cha:cha",
         "@org_golang_x_tools//go/callgraph/rta:rta",
+        "@org_golang_x_tools//go/callgraph/static:static",
         "@org_golang_x_tools//go/callgraph/vta:vta",
         "@org_golang_x_tools//go/cfg:cfg",
         "@org_golang_x_tools//go/expect:expect",
