Add wrap extension tag to implement go_wrap_sdk (#4301)
Add all wrapped sdks to the beginning of the toolchains so any specific
platforms override the downloaded toolchain.

Add a test that transitions to a different sdk from the downloaded
version. The test asserts the correct version.

**What type of PR is this?**

> Uncomment one line below and remove others.
>
> Bug fix
Feature
> Documentation
> Other

**What does this PR do? Why is it needed?**

**Which issues(s) does this PR fix?**

Fixes #4300 

**Other notes for review**

--- a/tests/bcr/MODULE.bazel
+++ b/tests/bcr/MODULE.bazel
@@ -33,6 +33,9 @@ go_sdk.download(
     ],
     version = "1.23.1",
 )
+go_sdk.wrap(
+    root_file = "@go_default_sdk//:README.md",
+)
 
 # Request an invalid SDK to verify that it isn't fetched since the first tag takes precedence.
 go_sdk.host(version = "3.0.0")
