--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -46,6 +46,7 @@ use_repo(
     "org_golang_google_protobuf",
     "org_golang_x_net",
     "org_golang_x_tools",
+    "org_uber_go_goleak",
     # Exported by gazelle specifically for rules_go.
     "bazel_gazelle_go_repository_config",
 )
