--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -47,6 +47,7 @@ use_repo(
     "org_golang_x_net",
     "org_golang_x_tools",
     "org_uber_go_goleak",
+    "org_uber_go_mock",
     # Exported by gazelle specifically for rules_go.
     "bazel_gazelle_go_repository_config",
 )
