--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -11,6 +11,9 @@ tasks:
     bazel: 6.5.0 # test minimum supported version of bazel
     build_targets:
       - "//..."
+    build_flags:
+      - "--per_file_copt=external/.*@-w"
+      - "--host_per_file_copt=external/.*@-w"
     test_targets:
       - "//..."
       # Nogo includes/excludes doesn't work before bazel 7
@@ -20,6 +23,14 @@ tasks:
       - "-//tests/runfiles:runfiles_test"
       # TODO: Investigate why this fails.
       - "-//tests/core/starlark/cgo:missing_cc_toolchain_explicit_pure_off_test"
+      # TODO: Bzlmod setup requires at least Bazel 7.
+      - "-//tests/core/cross:proto_test"
+      - "-//tests/core/from_go_mod_file:from_go_mod_file_test"
+      - "-//tests/core/transition:hermeticity_test"
+      - "-//tests/integration/gazelle:gazelle_test"
+    test_flags:
+      - "--per_file_copt=external/.*@-w"
+      - "--host_per_file_copt=external/.*@-w"
   ubuntu2404:
     # enable some unflipped incompatible flags on this platform to ensure we don't regress.
     build_flags:
@@ -86,13 +97,18 @@ tasks:
     test_targets:
       - "//..."
   rbe_ubuntu2404:
+    build_flags:
+      - "--per_file_copt=external/.*@-w"
+      - "--host_per_file_copt=external/.*@-w"
     build_targets:
       - "//..."
     test_flags:
+      - "--per_file_copt=external/.*@-w"
+      - "--host_per_file_copt=external/.*@-w"
       # Some tests depend on this feature being disabled. However, because it's
-      # enabled by default in the rbe_ubuntu1604 platform, we cannot simply remove
+      # enabled by default in the rbe_ubuntu2404 platform, we cannot simply remove
       # this flag here, we have to explicitly override it with 0.
-      - "--action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=0"
+      - "--repo_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=0"
       # go_bazel_test rules are marked local, since the executors don't have bazel
       # installed. It appears bazel is no longer in PATH on the host machines
       # in this configuration either.
